<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_20"
    tools:context=".ui.order_detail.OrderDetailActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_10"
        android:layout_marginBottom="@dimen/space_10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_id"
            android:textAllCaps="true"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_order_detail_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:gravity="start"
            android:text="@string/order_id"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_18"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delivery_on"
                android:textAllCaps="true"
                android:textSize="@dimen/text_12" />

            <TextView
                android:id="@+id/tv_order_detail_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:gravity="start"
                android:text="@string/order_id"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/items"
                android:textAllCaps="true"
                android:textSize="@dimen/text_12" />

            <TextView
                android:id="@+id/tv_order_detail_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_5"
                android:gravity="start"
                android:text="@string/order_id"
                android:textAlignment="viewStart"
                android:textSize="@dimen/text_12" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_marker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_order_detail_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_10"
            android:gravity="start"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_12" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_order_detail_payment_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/order_id"
            android:textAlignment="viewStart"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_10"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:gravity="start"
            android:text="@string/product"
            android:textAlignment="viewStart" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:gravity="center"
            android:text="@string/qty" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:gravity="center"
            android:text="@string/price" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/space_1"
        android:layout_marginTop="@dimen/space_5"
        android:layout_marginBottom="@dimen/space_5"
        android:background="@color/colorGray" />

    <include
        layout="@layout/include_progressbar"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_order_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/space_5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_order_detail_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:text="3"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_charge"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

        <TextView
            android:id="@+id/tv_order_detail_delivery_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:text="3"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_order_detail_total_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_5"
            android:text="3"
            android:textAllCaps="true"
            android:textSize="@dimen/text_16"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>